--- a/softplan-testetecnico/softplan-testetecnico.csproj
+++ b/softplan-testetecnico/softplan-testetecnico.csproj
@@ -5,5 +5,15 @@
     <RootNamespace>softplan_testetecnico</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\Programming\Personal\softplan-testetecnico\softplan-testetecnico\bin\Debug\netcoreapp3.1\softplan-testetecnico.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.OpenApi" Version="1.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    
+  </ItemGroup>
+
 
 </Project>
